--- a/jest.config.json
+++ b/jest.config.json
@@ -3,14 +3,10 @@
   "testEnvironment": "node",
   "modulePathIgnorePatterns": ["<rootDir>/dist/"],
   "testPathIgnorePatterns": ["<rootDir>/dist/"],
+  "passWithNoTests": true,
   "moduleNameMapper": {
     "^entities/lib/decode\\.js$": "<rootDir>/node_modules/entities/lib/decode.js",
     "^entities/lib/escape\\.js$": "<rootDir>/node_modules/entities/lib/escape.js",
     "(.+)\\.js": "$1"
-  },
-  "globals": {
-    "UrlFetchApp": {},
-    "CacheService": {},
-    "Utilities": {}
   }
 }
