integration テストを廃止し、シナリオテストとして再作成する

--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "prepare": "husky install",
     "clean": "rimraf dist",
     "lint": "npm run license && eslint --fix --no-error-on-unmatched-pattern src/ __tests__/",
-    "bundle": "rollup --no-treeshake -c rollup.config.mjs",
-    "build": "rimraf dist && tsc --declaration --sourceMap",
-    "license": "license-check-and-add add -f license-config.json",
-    "test": "jest __tests__/",
-    "test:integration": "jest __tests__/integration",
+    "bundle": "rimraf dist/bundle && rollup --no-treeshake -c rollup.config.mjs",
+    "build": "rimraf dist/build && tsc --declaration --sourceMap",
+    "test": "npm run test:unit",
+    "test:unit": "jest --projects=unit",
+    "test:e2e": "jest --projects=e2e",
     "test:coverage": "npm run test -- --coverage"
   },
   "engines": {
@@ -51,6 +51,7 @@
     "@types/jest": "^29.5.14",
     "@types/tough-cookie": "^4.0.5",
     "@typescript-eslint/eslint-plugin": "^8.19.0",
+    "@typescript-eslint/parser": "^8.19.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
