--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "es2020",
     "lib": ["es2020"],
     "moduleResolution": "node",
-    "outDir": "dist",
+    "outDir": "dist/build",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
