--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,17 @@
 {
   "compilerOptions": {
     "target": "es2020",
-    "module": "es2020",
-    "lib": ["es2020"],
-    "moduleResolution": "node",
-    "outDir": "dist/build",
+    "module": "Node16",
+    "lib": ["es2020", "DOM"],
+    "outDir": "./dist",
+    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
+    "skipLibCheck": false,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "allowUnreachableCode": false,
-    "allowUnusedLabels": false
+    "sourceMap": true,
+    "declaration": true,
+    "allowUnreachableCode": false
   },
   "include": ["src/**/*.ts"]
 }
