--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "lint": "npm run license && eslint --fix --no-error-on-unmatched-pattern src/ __tests__/",
     "build": "rimraf dist && tsc",
     "test": "npm run test:unit",
-    "test:unit": "jest --projects=unit",
-    "test:e2e": "jest --projects=e2e",
+    "test:unit": "jest --selectProjects=unit",
+    "test:e2e": "jest --selectProjects=e2e",
     "test:coverage": "npm run test -- --coverage"
   },
   "engines": {
