--- a/package.json
+++ b/package.json
@@ -26,10 +26,8 @@
     "clean": "rimraf dist",
     "lint": "npm run license && eslint --fix --no-error-on-unmatched-pattern src/ __tests__/",
     "build": "rimraf dist && tsc",
-    "test": "npm run test:unit",
-    "test:unit": "jest --selectProjects=unit",
-    "test:e2e": "jest --selectProjects=e2e",
-    "test:coverage": "npm run test:unit -- --coverage"
+    "test": "jest",
+    "test:coverage": "npm run test -- --coverage"
   },
   "engines": {
     "node": ">=20"
@@ -60,6 +58,7 @@
     "prettier": "^3.4.2",
     "rimraf": "^6.0.1",
     "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   }
 }
